@startuml
class Contador {
    + identificador: String
    + nomeCliente: String
    + consumoMes: int
    + IDENTIFICADOR_POR_OMISSAO = "Desconhecido" : String
    + NOME_CLIENTE_POR_OMISSAO = "Sem Nome" : String
    + CONSUMO_MES_POR_OMISSAO = 0 : int
    + «Contador(identificador: String, nomeCliente: String, consumoMes: int)»
    + «Contador(): IDENTIFICADOR_POR_OMISSAO, NOME_CLIENTE_POR_OMISSAO, CONSUMO_MES_POR_OMISSAO»
    + getIdentificador(): String
    + getNomeCliente(): String
    + calcularCusto(): double
}

class ContadorGas {
    - CUSTO_UNITARIO = 0.8: double
    + «ContadorGas(identificador: String, nomeCliente: String, consumoMes: int)»
    + «ContadorGas(): "GAS-"IDENTIFICADOR_POR_OMISSÃO, NOME_CLIENTE_POR_OMISSAO, CONSUMO_MES_POR_OMISSAO»
    + calcularCusto(): double
}

class ContadorEletricidade {
    + «ContadorEletricidade(identificador: String, nomeCliente: String, consumoMes: int)»
    + «ContadorEletricidade(): "ELECT-"IDENTIFICADOR_POR_OMISSÃO, NOME_CLIENTE_POR_OMISSAO, CONSUMO_MES_POR_OMISSAO»
}
hide ContadorEletricidade fields

class ContadorEletricidadeSimples {
    - custoUnitario: double
    + «ContadorEletricidadeSimples(identificador: String, nomeCliente: String, consumoMes: int, potenciaContratada: double)»
    + «ContadorEletricidadeSimples(): "ELECT-S-"IDENTIFICADOR_POR_OMISSÃO, NOME_CLIENTE_POR_OMISSAO, CONSUMO_MES_POR_OMISSAO, 3.45»
    + calcularCusto(): double
}

class ContadorEletricidadeBiHorario {
    - consumoHorasVazio: double
    - consumoForaVazio: double
    - custoHorasVazio: double
    - custoForaVazio: double
    + «ContadorEletricidadeBiHorario(identificador: String, nomeCliente: String, consumoHorasVazio: int, consumoForaVazio: int, potenciaContratada: double)»
    + «ContadorEletricidadeBiHorario(): "ELECT-BH-"IDENTIFICADOR_POR_OMISSÃO, NOME_CLIENTE_POR_OMISSAO, CONSUMO_MES_POR_OMISSAO, CONSUMO_MES_POR_OMISSAO, 3.45»
    + calcularCusto(): double
}

class GestaoContadores {
    + main(args: String[]): void
}

Contador <|-- ContadorGas
Contador <|-- ContadorEletricidade
ContadorEletricidade <|-- ContadorEletricidadeSimples
ContadorEletricidade <|-- ContadorEletricidadeBiHorario
@enduml
